# micro-gps-cpp

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md  config.cmake  config_cscycle.cmake  config_linux.cmake  config_mac.cmake  config_tegra.cmake  config_visiongpu1.cmake
exec/: CMakeLists.txt  batch_extract_sift.cpp  calibrate_intrinsics.h  calibrate_robot_camera.cpp  expand_map.cpp  flycapture_wrapper.cpp  flycapture_wrapper.h  gui.cpp  gui.h  gui_helper.h  main.cpp  online_gui.cpp  refine_poses.cpp  refine_poses.h  robot.cpp  test.vert
exec/gl3w/: CMakeLists.txt
executables/: CMakeLists.txt  batch_crop_sift_patches.cpp  batch_extract_sift.cpp  calibrate_intrinsics.cpp  gui_helper.cpp  gui_helper.h  micro_gps_exec.cpp  micro_gps_gui.cpp  robot.h  test.cpp  test.frag  test_image_basics.cpp
executables/legacy/: batch_extract_sift.cpp  exec_util.h  monitor.cpp
imgui/: CMakeLists.txt
imgui/gl3w/: CMakeLists.txt
imgui/lib/: imconfig.h
imgui_lib/: CMakeLists.txt  imgui_demo.cpp
scripts/: compare_descriptors-cs4_hallway_long_packed.fig  compare_descriptors-equad_unloading_long_packed.fig  compute_num_samples2.m  concat_images.m  get_file_list.m  mat2bin.m  output_micro_gps_poses.m  parse_test_report.m  read_image_list.m  read_output_folder.m  read_precomputed_sift.m  read_sift_extract_surf.m  read_sift_generate_others.m  remove_png_gamma.m  script_compare_descriptors.m  script_concat_example_textures.m  script_concat_motion_blur_images.m  script_extract_features.m  script_extract_features_for_deepdesc.m  script_move_features.m  script_performance.m  script_read_sift_extract_surf.m  script_visual_words.m  test_rotate_map.m  test_surf.m
scripts/python/: kmeans_clustering.py  myutil.py  peek_precomputed_feature.py  precomputed_sift.py
src/: CMakeLists.txt  database.cpp  database.h  image.cpp  image.h  image_dataset.cpp  image_dataset.h  image_func.cpp  image_func.h  inpolygon.c  inpolygon.h  inpolygon2.c  inpolygon2.h  main.cpp  micro_gps.cpp  micro_gps.h  micro_gps2.cpp  micro_gps2.h  test_image_basics.cpp  util.h  util2.h  work_image.cpp  work_image.h
src/legacy/: dataset.cpp  dataset.h  inpolygon.c  micro_gps.cpp  micro_gps.h  util.h
